# Strategy-Lib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: S1_cn_etf_dca_basic_v1.yaml  S2_cn_etf_dca_swing_v1.yaml  S2_cn_etf_dca_swing_v2.yaml  S3_cn_etf_equal_rebalance_v1.yaml  S4_cn_etf_momentum_tilt_v1.yaml  S4_cn_etf_momentum_tilt_v2.yaml  S5_cn_etf_trend_tilt_v1.yaml  S5_cn_etf_trend_tilt_v2.yaml  S6_cn_etf_value_averaging_v1.yaml  S7_cn_etf_market_ma_filter_v1.yaml  S7_cn_etf_market_ma_filter_v2.yaml  S8_cn_etf_overseas_equal_v1.yaml
configs/examples/: btc_momentum.yaml  cn_etf_rotation.yaml  us_etf_momentum.yaml
docs/: benchmark_suite_v1.md  benchmark_suite_v2_crypto.md  v2_4h_frequency_test.md
ideas/: README.md
ideas/_template/: idea.md  notes.md
notebooks/factors/: 01_momentum_intro.py
scripts/: universe_sweep_demo.py  v2_4h_sweep.py  v2_crypto_sweep.py
src/strategy_lib/: __init__.py  cli.py  quickrun.py  universes.py
summaries/: README.md
summaries/S1_cn_etf_dca_basic/: README.md
summaries/S2_cn_etf_dca_swing/: README.md
summaries/S3_cn_etf_equal_rebalance/: README.md
summaries/S4_cn_etf_momentum_tilt/: README.md
summaries/S5_cn_etf_trend_tilt/: README.md
summaries/S6_cn_etf_value_averaging/: README.md
summaries/S7_cn_etf_market_ma_filter/: README.md
summaries/S8_cn_etf_overseas_equal/: README.md
summaries/S9_crypto_basket_equal/: README.md
summaries/_template/: conclusion.md  implementation.md  validation.md
tests/: conftest.py
tests/analysis/: test_ic.py
tests/data/: test_base.py
(+183 files in other folders)
